force-app/main/default/objects/ComplyAdvantage_Product__c/ComplyAdvantage_Product__c.object-meta.xml
<CustomObject>
    <label>ComplyAdvantage Product</label>
    <nameField>
        <label>ComplyAdvantage Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ComplyAdvantage Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>