force-app/main/default/objects/ComplyAdvantage_Product__c/fields/ComplyAdvantage_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>ComplyAdvantage_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ComplyAdvantage Bank Account</label>
    <referenceTo>ComplyAdvantage_Bank_Account__c</referenceTo>
    <relationshipLabel>ComplyAdvantage Products</relationshipLabel>
    <relationshipName>ComplyAdvantage_Products</relationshipName>
    <type>Lookup</type>
</CustomField>