force-app/main/default/objects/ComplyAdvantage_Product__c/fields/ComplyAdvantage_Wallet__c.field-meta.xml
<CustomField>
    <fullName>ComplyAdvantage_Wallet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ComplyAdvantage Wallet</label>
    <referenceTo>ComplyAdvantage_Wallet__c</referenceTo>
    <relationshipLabel>ComplyAdvantage Products</relationshipLabel>
    <relationshipName>ComplyAdvantage_Products</relationshipName>
    <type>Lookup</type>
</CustomField>