force-app/main/default/objects/ComplyAdvantage_Product__c/fields/Monthly_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Received_Amount__c</fullName>
    <label>Monthly Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>