force-app/main/default/objects/ComplyAdvantage_Product__c/fields/Monthly_Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Transaction_Count__c</fullName>
    <label>Monthly Transaction Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>